data/derived/comb/progs/unify/prog6101.ml.out
Characters 347-351:
  let (_, res) = List.fold_left f base args in res;;
                                       ^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
